Feature: Added Formspree to French contact page

--- a/homefr.html
+++ b/homefr.html
@@ -374,25 +374,25 @@
       <div data-figma-id="2619:4418" class="frame-80"><img src="images/Envelope1.png" loading="lazy" alt=""></div>
       <div class="text-block-10">Inscrivez-vous à la liste d&#x27;attente</div>
       <div class="text-block-11">Soyez parmi les premiers à découvrir la puissance de la création de contenu autonome.</div>
-      <div class="form-block w-form">
-        <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="68dad39e6f9eedac0fe70772" data-wf-element-id="dd6a4276-d01e-5bbb-3d1c-8128f0af42d7">
+ <div class="form-block w-form">
+        <form action="https://formspree.io/f/xnngnvdz" id="email-form" name="email-form" data-name="Email Form" method="POST" data-wf-page-id="68d1da7f56871e3ab5aa7e4b" data-wf-element-id="dd6a4276-d01e-5bbb-3d1c-8128f0af42d7">
           <div class="w-layout-grid grid-13">
             <div class="prompt">
-              <div class="prompt-text">Prénom</div><input class="text-field-2 w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="name">
+              <div class="prompt-text">Prénom</div><input class="text-field-2 w-input" maxlength="256" name="firstname" data-name="Name" placeholder="" type="text" id="firstname">
             </div>
             <div class="prompt">
-              <div class="prompt-text">Nom de famille</div><input class="text-field-2 w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="name">
+              <div class="prompt-text">Nom de famille</div><input class="text-field-2 w-input" maxlength="256" name="lastname" data-name="Name" placeholder="" type="text" id="lastname">
             </div>
           </div>
           <div class="prompt">
             <div class="prompt-text">Email</div><input class="text-field w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="email" id="email" required="">
-          </div><input type="submit" data-wait="Please wait..." class="submit-button d w-button" value="réserver ma place">
+          </div><input type="submit" data-wait="Please wait..." class="submit-button w-button" value="Secure my spot">
         </form>
-        <div class="w-form-done">
-          <div>Thank you! Your submission has been received!</div>
+        <div class="w-form-done" style="background-color: white;">
+          <div>Merci! Votre demande à été soumise!</div>
         </div>
-        <div class="w-form-fail">
-          <div>Oops! Something went wrong while submitting the form.</div>
+        <div class="w-form-fail" style="background-color: white;">
+          <div>Oops! Il y a eu un problem avec la demande.</div>
         </div>
       </div>
       <a data-w-id="dd6a4276-d01e-5bbb-3d1c-8128f0af42ec" href="#" class="link-block-4 w-inline-block">
