Visual: Centered submit button

--- a/homefr.html
+++ b/homefr.html
@@ -16,6 +16,13 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
+<style>
+.submit-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
     <div class="container nav-container w-container">
@@ -386,7 +393,7 @@
           </div>
           <div class="prompt">
             <div class="prompt-text">Email</div><input class="text-field w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="email" id="email" required="">
-          </div><input type="submit" data-wait="Please wait..." class="submit-button w-button" value="Secure my spot">
+          </div><input type="submit" data-wait="Please wait..." class="submit-button w-button" value="Réserver ma place">
         </form>
         <div class="w-form-done" style="background-color: white;">
           <div>Merci! Votre demande à été soumise!</div>
