--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
+<style>
+.submit-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
     <div class="container nav-container w-container">
