--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div data-w-id="d4e97c99-75a9-74e4-f2e9-e83f478ec52c" class="text-block-12">+</div>
       </a>
       <section class="container-five container-5 h">
-        <p data-figma-id="2121:4205" class="get-things-done-by-a-3">Terms &amp; Conditions</p>
+        <p data-figma-id="2121:4205" class="get-things-done-by-a-3" style="padding-top: 250px;">Terms &amp; Conditions</p>
         <div class="w-layout-blockcontainer container-4 w-container">
           <p data-figma-id="2120:3105" class="we-share-common-tren-2 tc">Effective date: 9/16/2025<br><br>Welcome to our website! Below are the Terms &amp; Conditions that govern access and use of our pre-launch platform. Please read them carefully, as using the website constitutes your agreement to these terms.</p>
           <div class="div-block-2">
@@ -241,7 +241,7 @@
               </div>
             </div>
           </div>
-          <p data-figma-id="2537:18197" id="w-node-fd19b342-b18f-d16b-8eed-a38b61dca3a3-db315505" class="with-lots-of-unique">By using this website, you confirm that you have read, understood, and agree to these Terms &amp; Condirtions
+          <p data-figma-id="2537:18197" id="w-node-fd19b342-b18f-d16b-8eed-a38b61dca3a3-db315505" class="with-lots-of-unique">By using this website, you confirm that you have read, understood, and agree to these Terms &amp; Conditions
           </p>
         </div>
       </section>
@@ -448,7 +448,7 @@
     <div class="w-layout-grid grid-7">
       <p data-figma-id="2537:18191" class="manage-your-projects-2">The Autonomous Content Workflow
       </p>
-      <p data-figma-id="2537:18190" class="with-lots-of-unique-4">Our AI takes care of everything, from strategy to scheduling, and brings you in for one simple step: your final approval.</p>
+      <p data-figma-id="2537:18190" class="with-lots-of-unique-4">Our AI takes care of everything, from strategy to scheduling, and brings you in for one simple step:<br>your final approval.</p>
     </div>
     <div class="w-layout-grid grid-10">
       <div class="gradient">
