--- a/homefr.html
+++ b/homefr.html
@@ -15,6 +15,21 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <style>
+/* Fix for "Conditions générales" button to keep text on one line */
+.link-block.navlink,
+.link-block-4,
+.link-block-4.w-inline-block {
+  display: inline-flex !important;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap !important;
+  max-width: fit-content;
+  padding: 0.75rem 1.25rem; /* adjust if needed */
+  text-align: center;
+}
+</style>
+
 </head>
 <style>
 .submit-button {
@@ -409,7 +424,7 @@
   </div>
   <section class="section">
     <div class="w-layout-grid grid">
-      <p data-figma-id="2120:3104" id="w-node-_9b1691da-45ab-7c26-4288-c90ea037a8c9-0fe70772" class="get-things-done-by-a-2 fr">Débloquez plus facilement des contenus plus intelligents.
+      <p data-figma-id="2120:3104" id="w-node-_9b1691da-45ab-7c26-4288-c90ea037a8c9-0fe70772" class="get-things-done-by-a-2 fr">Obtenez du contenu plus intelligent,<br>sans vous compliquer la vie.
       </p>
       <p data-figma-id="2120:3105" id="w-node-_20022c44-7d71-4347-6831-0361e9a639de-0fe70772" class="we-share-common-tren-2">Nous fournissons un système complet et optimisé de manière autonome pour le marketing de contenu, afin que vous puissiez vous concentrer sur votre activité.</p>
       <a id="w-node-_64cc56ef-e927-dfc4-f2bf-35e1d1d4014e-0fe70772" data-w-id="64cc56ef-e927-dfc4-f2bf-35e1d1d4014e" href="#" class="link-block main-button w-inline-block">
@@ -450,7 +465,7 @@
     <div class="w-layout-grid grid-7">
       <p data-figma-id="2537:18191" class="manage-your-projects-2">Le flux de travail autonome pour le contenu
       </p>
-      <p data-figma-id="2537:18190" class="with-lots-of-unique-4">Notre IA s&#x27;occupe de tout, de la stratégie à la planification, et vous n&#x27;avez qu&#x27;une seule chose à faire : donner votre accord final.</p>
+      <p data-figma-id="2537:18190" class="with-lots-of-unique-4">Notre IA s&#x27;occupe de tout, de la stratégie à la planification, et vous n&#x27;avez qu&#x27;une seule chose à faire:<br>donner votre accord final.</p>
     </div>
     <div class="w-layout-grid grid-10">
       <div class="gradient">
@@ -485,7 +500,7 @@
         <div class="div-block-2 g">
           <div class="third-text-wrapper">
             <p data-figma-id="2537:18198" class="create-a-project">N&#x27;approuver que la livraison</p>
-            <p data-figma-id="2537:18197" class="with-lots-of-unique-copy first-text">N&#x27;approuver que la livraison
+            <p data-figma-id="2537:18197" class="with-lots-of-unique-copy first-text">Il fournit une file d'attente de contenu préprogrammée, vous garantissant ainsi le dernier mot.
             </p>
           </div>
           <div class="cgrad">
@@ -531,7 +546,7 @@
           <div class="text-block-4 legal">Legal</div>
           <div class="div-block-8">
             <a data-w-id="4c43eb4c-1d0b-cdb8-34f2-c7c6132475e5" href="#" class="link">Condition Générales</a>
-            <a data-w-id="4ab36280-af73-2c5e-a146-134b175dc0c9" href="#" class="link-4"> I Politique de Confidentialité</a>
+            <a data-w-id="4ab36280-af73-2c5e-a146-134b175dc0c9" href="#" class="link-4">Politique de<br>Confidentialité</a>
           </div>
           <div class="div-block-3">
             <a href="https://www.linkedin.com/company/108279311/" target="_blank" class="social-link w-inline-block"><img src="images/Shape.svg" data-figma-image-id="68bf85984a0a5e4a106f7073" width="270" alt="" data-figma-id="2545:31466" data-figma-image-hash="a281a4d17f676d00fcf48857421226de" loading="lazy"></a>
